# pet-store

./: .dockerignore  .gitignore  .opencode.json  AGENTS.md  PROJECT_REFERENCE.md  backup_before_005.sql  data-collection-module-design-change.md  data-collection-module-design.md  docker-compose.yml  import_rosy_fresh.py  import_royal_canin.py  package-lock.json  package.json  pdd爬虫获取的文件.txt  pet-supplies-miniprogram-design.md  royal_canin_spus.json  皇家猫粮全系列产品调研报告.md  鲜朗猫粮_spus.json  鲜朗猫粮全系列产品调研报告.md
admin/: Dockerfile  (+9 more)
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  test_onebound_detail.py  test_pdd_detail.py  test_pdd_detail_full.py  test_pdd_goods_detail.py  test_pdd_three_apis.py  test_product_detail.py
backend/alembic/: env.py
backend/alembic/versions/: 004_refract_goods_spu.py  005_spu_migration.py  007_pet_profiles.py  6b16b5c8d143_initial_migration.py  796d5c4567b1_data_fetch_jobs_product_id_to_spu_id.py  7a2f3e8b9c4d_add_is_admin_to_users.py  a3b7c1d9e5f2_add_full_text_search.py  b11cc8dbc49a_006_add_listing_detail_fields.py  b4d8e2f6a0c3_add_performance_indexes.py  c5e1f3a7b9d2_add_data_collection_tables.py  d9a8f0e2b7c1_add_collection_type_to_data_fetch_jobs.py  e1f2a3b4c5d6_add_delta_v3_columns.py  f2a3b4c5d6e7_extend_source_url_length.py  g1a2b3c4d5e6_extend_external_url_length.py  h1a2b3c4d5e6_add_brand_filter_to_search_strategies.py  (+1 more)
backend/app/: main.py
backend/scripts/: backfill_spu_prices.py  dump_rawdata.py  login_pdd.py  save_session.py  seed_admin.py  seed_mock_data.py
backend/tests/: conftest.py
(+297 files in other folders)
